# tinyrenderer

./: .gitignore  CMakeLists.txt  LICENSE  tinyrenderer.cpp  tinyrenderer.h
assets/models/: african_head_nm.tga  african_head_nm_tangent.tga  chess.tga  chess_basic.tga
src/: Instrumentor.cpp  Instrumentor.h  TGAColor.h  WinMain.cpp  colors.h  constants.h  core.h  geometry.h  input.h  line_drawing.h  line_drawing_test.h  math.h  model.cpp  model.h  my_gl.cpp  my_gl.h  pipeline.h  random.h  shader.cpp  shader.h  texture.cpp  texture.h  tgaimage.cpp  tgaimage.h  time.h  tinyrenderer.cpp  transformations.h  triangle_drawing.cpp  triangle_drawing.h  triangle_drawing_test.h  types.h  window_output.cpp  window_output.h  z_buffer.h
